# prokra

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
inc/: glad.c
inc/glad/: glad.h
prokra/: CMakeLists.txt  window.cpp  window.hpp
